edit info-text on about-me, set min width on dropzone to avoid jumping field

--- a/client/src/pages/EulaChecker/eulaChecker.module.css
+++ b/client/src/pages/EulaChecker/eulaChecker.module.css
@@ -184,6 +184,7 @@
 
 .dropzone.active {
   transform: scale(1.05);
+  min-width: 20rem;
 }
 
 p {
